--- a/css/landing.css
+++ b/css/landing.css
@@ -4,12 +4,40 @@
   padding: 0;
   margin: 0;
 }
+html {
+  height: 100%;
+  width: 100%;
+}
 /*Universal styles ends*/
 
 /*general styles starts*/
 body {
   position: fixed;
   z-index: -1;
-  background: url(../images/restaurant.png) no-repeat center center/ cover;
+  background: url(../images/restaurant-sm.jpg) no-repeat center center/ cover;
+  height: 100vh;
+  width: 100vw;
 }
 /*general styles ends*/
+/*main container starts*/
+main {
+  background-color: rgba(0, 15, 0, 0.43);
+  height: 100%;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
+/*main container ends*/
+
+/*media queries start*/
+@media only screen and (min-width: 680px) {
+  /*general styles*/
+  body {
+    background: url(../images/restaurant.png) no-repeat center center/ cover;
+  }
+  /*main container styles*/
+  main {
+    background-color: transparent;
+  }
+}
+/*media queries end*/
