--- a/css/landing.css
+++ b/css/landing.css
@@ -17,6 +17,7 @@ body {
   background: url(../images/restaurant-sm.jpg) no-repeat center center/ cover;
   height: 100vh;
   width: 100vw;
+  transition: all 0.3s ease;
 }
 /*general styles ends*/
 /*main container starts*/
