--- a/css/landing.css
+++ b/css/landing.css
@@ -4,29 +4,37 @@
   padding: 0;
   margin: 0;
 }
-html {
-  height: 100%;
-  width: 100%;
+body {
+  width: 100vw;
+  height: 100vh;
 }
 /*Universal styles ends*/
 
 /*general styles starts*/
 body {
-  position: fixed;
+  position: relative;
+  display: flex;
   z-index: -1;
   background: url(../images/restaurant-sm.jpg) no-repeat center center/ cover;
-  height: 100vh;
-  width: 100vw;
   transition: all 0.3s ease;
+}
+i {
+  color: white;
 }
 /*general styles ends*/
 /*main container starts*/
 main {
+  display: flex;
+  flex-direction: column;
   background-color: rgba(0, 15, 0, 0.43);
-  height: 100%;
-  width: 100%;
   position: relative;
   z-index: 1;
+  color: #efe;
+  height: 100%;
+  width: 100%;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
 }
 /*main container ends*/
 
