--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,7 +7,13 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Helvetica-light", "Helvetica Nueue Light", "Helvetica Nueue",
+    Helvetica, Ariel, "Lucida Grande", sans-serif;
+}
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
