--- a/css/landing.css
+++ b/css/landing.css
@@ -248,6 +248,15 @@ main {
   margin: 10px 0;
   width: 100%;
   z-index: 3;
+  opacity: 0;
+  visibility: 0;
+  animation: show 2s cubic-bezier(0.26, 0.23, 0.5, 0.99) 1.5s forwards;
+}
+@keyframes show {
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 .btns {
   display: flex;
